--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 <section class="quote">
 	<div class="grid container">
 		<div class="cell cell--12--small">
-			<h2>"Don't let yesterday use up too much of today"</h2>
-			<h5>Will Rogers</h5>
+			<h2 class="quote__text">"Don't let yesterday use up too much of today."</h2>
+			<h5 class="quote__author">Will Rogers</h5>
 		</div>
 	</div>
 </section>
@@ -123,34 +123,51 @@
 	<h2>Događaji</h2>
 
 	<div class="grid">
-		<div class="cell cell--12--small cell--6--large">
-			<img src="" alt="event">
-			<p>Lorem ipsum dolor sit amet lorem</p>
-			<p>20.04.2017. - 11:30h</p>
-			<p>Location Lorem ipsum</p>
+		<div class="cell cell--12--small cell--6--large event">
+			<div>
+				<img src="img/photos/alvin-balemesa-105751.jpg" width="200" alt="event">
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet lorem</p>
+				<p>20.04.2017. - 11:30h</p>
+				<p>Location Lorem ipsum</p>
+			</div>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large">
-			<img src="" alt="event">
-			<p>Lorem ipsum dolor sit amet lorem</p>
-			<p>20.04.2017. - 11:30h</p>
-			<p>Location Lorem ipsum</p>
+		<div class="cell cell--12--small cell--6--large event">
+			<div>
+				<img src="img/photos/caleb-jones-135058.jpg" width="200" alt="event">
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet lorem</p>
+				<p>20.04.2017. - 11:30h</p>
+				<p>Location Lorem ipsum</p>
+			</div>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large">
-			<img src="" alt="event">
-			<p>Lorem ipsum dolor sit amet lorem</p>
-			<p>20.04.2017. - 11:30h</p>
-			<p>Location Lorem ipsum</p>
+		<div class="cell cell--12--small cell--6--large event">
+			<div>
+				<img src="img/photos/jenn-richardson-112980.jpg" width="200" alt="event">
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet lorem</p>
+				<p>20.04.2017. - 11:30h</p>
+				<p>Location Lorem ipsum</p>
+			</div>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large">
-			<img src="" alt="event">
-			<p>Lorem ipsum dolor sit amet lorem</p>
-			<p>20.04.2017. - 11:30h</p>
-			<p>Location Lorem ipsum</p>
-		</div>
+		<div class="cell cell--12--small cell--6--large event">
+			<div>
+				<img src="img/photos/oliver-thomas-klein-161835.jpg" width="200" alt="event">
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet lorem</p>
+				<p>20.04.2017. - 11:30h</p>
+				<p>Location Lorem ipsum</p>
+			</div>
 	</div>
+
+	<button class="btn btn--primary">READ MORE</button>
 </section>
 
 
@@ -165,7 +182,7 @@
 					<div class="form__field">
          	 <label class="form__label">Email</label>
          	 <input class="form__input" type="text" placeholder="ime.prezime@mail.com">
-         	 <button class="btn form__btn"><a hred="#">PRETPLATI ME</a></button>
+         	 <button class="btn btn--primary"><a hred="#">PRETPLATI ME</a></button>
        	 </div>
 				</fieldset>
 			</form>
