--- a/index.html
+++ b/index.html
@@ -122,12 +122,23 @@
 <section class="container events">
 	<h2>Događaji</h2>
 
-	<div class="grid">
-		<div class="cell cell--12--small cell--6--large event">
-			<div>
-				<img src="img/photos/alvin-balemesa-105751.jpg" width="200" alt="event">
+	<div class="grid grid--gutters">
+		<div class="cell cell--12--small cell--6--large event event--border">
+			<div class="event__img">
+				<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="event">
 			</div>
-			<div>
+			<div class="event__info">
+				<p>Lorem ipsum dolor sit amet lorem</p>
+				<p>20.04.2017. - 11:30h</p>
+				<p>Location Lorem ipsum</p>
+			</div>
+		</div>
+
+		<div class="cell cell--12--small cell--6--large event event--border">
+			<div class="event__img">
+				<img src="img/photos/alvin-balemesa-105751.jpg" alt="event">
+			</div>
+			<div class="event__info">
 				<p>Lorem ipsum dolor sit amet lorem</p>
 				<p>20.04.2017. - 11:30h</p>
 				<p>Location Lorem ipsum</p>
@@ -135,10 +146,10 @@
 		</div>
 
 		<div class="cell cell--12--small cell--6--large event">
-			<div>
-				<img src="img/photos/caleb-jones-135058.jpg" width="200" alt="event">
+			<div class="event__img">
+				<img src="img/photos/alvin-balemesa-105751.jpg" alt="event">
 			</div>
-			<div>
+			<div class="event__info">
 				<p>Lorem ipsum dolor sit amet lorem</p>
 				<p>20.04.2017. - 11:30h</p>
 				<p>Location Lorem ipsum</p>
@@ -146,32 +157,22 @@
 		</div>
 
 		<div class="cell cell--12--small cell--6--large event">
-			<div>
-				<img src="img/photos/jenn-richardson-112980.jpg" width="200" alt="event">
+			<div class="event__img">
+				<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="event">
 			</div>
-			<div>
+			<div class="event__info">
 				<p>Lorem ipsum dolor sit amet lorem</p>
 				<p>20.04.2017. - 11:30h</p>
 				<p>Location Lorem ipsum</p>
 			</div>
 		</div>
-
-		<div class="cell cell--12--small cell--6--large event">
-			<div>
-				<img src="img/photos/oliver-thomas-klein-161835.jpg" width="200" alt="event">
-			</div>
-			<div>
-				<p>Lorem ipsum dolor sit amet lorem</p>
-				<p>20.04.2017. - 11:30h</p>
-				<p>Location Lorem ipsum</p>
-			</div>
 	</div>
 
-	<button class="btn btn--primary">READ MORE</button>
+	<button class="btn btn--primary right">READ MORE</button>
 </section>
 
 
-<footer class="footer">
+<footer class="footer clear">
 	<div class="grid container">
 		<div class="cell cell--12--small cell--6--large">
 			<h2>Newsletter</h2>
