--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
 <section class="container faq">
 	<h2>Pitanja i odgovori</h2>
 	
-	<div class="grid">
+	<div class="grid grid--gutters">
 		<div class="cell cell--12--small cell--6--large">
-			<p></p>
-			<p></p>
-			<p></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
+			<p>Proin vitae nisi vehicula, pretium lacus sit amet, dictum metus. Aliquam tempus lacus nec enim elementum, et accumsan lectus auctor. Integer dignissim felis sit amet ex vulputate, eu elementum purus ullamcorper. Sed et orci eu odio dapibus efficitur in nec nisi. Curabitur hendrerit nibh vel risus efficitur, sed venenatis metus fermentum. Nunc sollicitudin vulputate libero vel eleifend. Mauris a nibh ornare, tincidunt tortor nec, vulputate lorem.</p>
+			<p>Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. Cras volutpat consequat congue. Praesent commodo, sem placerat porttitor consectetur, libero enim cursus quam, eget sodales ante metus non ex. Sed et ligula erat. Vivamus et convallis mauris, at laoreet quam. Sed convallis arcu at consectetur mattis. Aliquam consequat egestas elit, vel tincidunt sapien vestibulum eget.Fusce at ipsum libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam euismod eros porta mauris consectetur aliquam. Mauris gravida blandit sem vulputate pharetra.Nulla rutrum lectus dui. <a href="#" class="link">VIŠE</a></p>
 		</div>
 
 		<div class="cell cell--12--small cell--6--large">
-			<p></p>
-			<p></p>
-			<p></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus interdum facilisis. Integer vitae fringilla risus. Fusce vitae efficitur purus, ut egestas mi. Morbi ac felis vel erat rutrum pretium. Integer pretium ornare nulla id consectetur. Proin vitae nisi vehicula, pretium lacus sit amet, dictum metus. Aliquam tempus lacus nec enim elementum, et accumsan lectus auctor. Integer dignissim felis sit amet ex vulputate, eu elementum purus ullamcorper. Sed et orci eu odio dapibus efficitur in nec nisi. Curabitur hendrerit nibh vel risus efficitur, sed venenatis metus fermentum. Nunc sollicitudin vulputate libero vel eleifend. Mauris a nibh ornare, tincidunt tortor nec, vulputate lorem. Etiam vulputate sodales mauris non vulputate.</p>
+			<p>Cras neque elit, laoreet at nibh non, feugiat venenatis augue. Ut erat dui, dictum a euismod ac, vehicula vitae nisl. Maecenas in posuere tellus, at cursus libero. Vivamus vitae rhoncus ligula. <a href="#" class="link">VIŠE</a></p>
 		</div>
 	</div>
 
-	<button><a href="">READ MORE</a></button>
+	<button class="btn btn--primary right">READ MORE</button>
 </section>
 
 
-<section class="quote">
+<section class="quote clear">
 	<div class="grid container">
 		<div class="cell cell--12--small">
 			<h2 class="quote__text">"Don't let yesterday use up too much of today."</h2>
