--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<div class="cell cell--12--small nav--desktop">
 		<div class="nav__logo">
 			<img src="" alt="logo">
+			<h3>RASTAVLJENI</h3>
 		</div>
 
 		<div class="nav__links">
@@ -52,32 +53,33 @@
 <header class="header">
 	<div class="grid container">
 		<div class="cell cell--12--small post">
-			<h3>20.04.2017. - KATEGORIJA</h3>
-			<hr />
-			<h1>Lorem ipsum dolor sit amet</h1>
+			<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
+			<h3 class="post__info">20.04.2017. - KATEGORIJA</h3>
+			<h1 class="post__title">Lorem ipsum dolor sit amet</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. <a href="#" class="link">VIŠE</a></p>
 		</div>
 	</div>
 </header>
 
 
 <section class="container posts">
-	<div class="grid">
+	<div class="grid grid--gutters">
 		<div class="cell cell--12--small cell--4--large post">
-			<h4>20.04.2017. - KATEGORIJA</h4>
-			<hr />
-			<h2>Lorem ipsum dolor sit amet</h2>
+			<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
+			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 		</div>
 
 		<div class="cell cell--12--small cell--4--large post">
-			<h4>20.04.2017. - KATEGORIJA</h4>
-			<hr />
-			<h2>Lorem ipsum dolor sit amet</h2>
+			<img src="img/photos/andrew-branch-106877.jpg" class="post__img" alt="post" />
+			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 		</div>
 
 		<div class="cell cell--12--small cell--4--large post">
-			<h4>20.04.2017. - KATEGORIJA</h4>
-			<hr />
-			<h2>Lorem ipsum dolor sit amet</h2>
+			<img src="img/photos/caleb-jones-135058.jpg" class="post__img" alt="post" />
+			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 		</div>
 	</div>
 </section>
