--- a/index.html
+++ b/index.html
@@ -11,46 +11,47 @@
 </head>
 
 <body>
+<nav class="nav">
+	<div class="grid container">
+		<!--<div class="cell cell--12--small nav--mobile">
+			<div class="nav__logo">
+				<img src="" alt="logo">
+			</div>
 
-<nav class="grid container navigation">
-	<!--<div class="cell cell--12--small nav--mobile">
-		<div class="nav__logo">
-			<img src="" alt="logo">
-		</div>
+			<div class="nav__links">
+				<ul>
+					<li><a href="#" class="link">O nama</a></li>
+					<li><a href="#" class="link">Blog</a></li>
+					<li><a href="#" class="link">Đogađaji</a></li>
+					<li><a href="#" class="link">Savjeti</a></li>
+					<li><a href="#" class="link">Kontakt</a></li>
+					<li><a href="#" class="link"><img src="" alt="search" /></a></li>
+				</ul>
+			</div>
+		</div>-->
 
-		<div class="nav__links">
-			<ul>
-				<li><a href="#">O nama</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Đogađaji</a></li>
-				<li><a href="#">Savjeti</a></li>
-				<li><a href="#">Kontakt</a></li>
-				<li><a href="#"><img src="" alt="search" /></a></li>
-			</ul>
-		</div>
-	</div>-->
+		<div class="cell cell--12--small nav--desktop">
+			<div class="nav__logo">
+				<img src="img/logo.png" class="left" alt="logo">
+				<h3>RASTAVLJENI</h3>
+			</div>
 
-	<div class="cell cell--12--small nav--desktop">
-		<div class="nav__logo">
-			<img src="" alt="logo">
-			<h3>RASTAVLJENI</h3>
-		</div>
-
-		<div class="nav__links">
-			<ul>
-				<li><a href="#">O nama</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Đogađaji</a></li>
-				<li><a href="#">Savjeti</a></li>
-				<li><a href="#">Kontakt</a></li>
-				<li><a href="#"><img src="" alt="search" /></a></li>
-			</ul>
+			<div class="nav__links">
+				<ul class="right">
+					<li><a href="#" class="link">O nama</a></li>
+					<li><a href="#" class="link">Blog</a></li>
+					<li><a href="#" class="link">Đogađaji</a></li>
+					<li><a href="#" class="link">Savjeti</a></li>
+					<li><a href="#" class="link">Kontakt</a></li>
+					<li><a href="#" class="link"><img src="img/icons/ic_search_white_48dp_1x.png" width="32" alt="search" /></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </nav>
 
 
-<header class="header">
+<header class="header clear">
 	<div class="grid container">
 		<div class="cell cell--12--small post">
 			<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
