--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<li><a href="#" class="link">Đogađaji</a></li>
 					<li><a href="#" class="link">Savjeti</a></li>
 					<li><a href="#" class="link">Kontakt</a></li>
-					<li><a href="#" class="link"><img src="img/icons/ic_search_white_48dp_1x.png" width="32" alt="search" /></a></li>
+					<li><a href="#" class="link"><img src="img/icons/ic_search_white_48dp_1x.png" class="search-icon" alt="search" /></a></li>
 				</ul>
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 		</div>
 	</div>
 
-	<button class="btn btn--primary right">READ MORE</button>
+	<button class="btn btn--primary right"><a href="#">READ MORE</a></button>
 </section>
 
 
@@ -171,7 +171,7 @@
 		</div>
 	</div>
 
-	<button class="btn btn--primary right">READ MORE</button>
+	<button class="btn btn--primary right"><a href="#">READ MORE</a></button>
 </section>
 
 
@@ -186,7 +186,7 @@
 					<div class="form__field">
          	 <label class="form__label">Email</label>
          	 <input class="form__input" type="text" placeholder="ime.prezime@mail.com">
-         	 <button class="btn btn--primary"><a hred="#">PRETPLATI ME</a></button>
+         	 <button class="btn btn--primary"><a href="#">PRETPLATI ME</a></button>
        	 </div>
 				</fieldset>
 			</form>
