--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </nav>
 
 
-<header class="header clear">
+<header class="header header--home clear">
 	<div class="grid container">
 		<div class="cell cell--12--small post">
 			<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
