--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 		<h2>Autori</h2>	
 	
 		<div class="grid grid--gutters">
-			<div class="cell cell--6--small cell--4--large author author">
+			<div class="cell cell--6--small cell--4--large author author--lg">
 				<div class="author__img">
 					<img src="img/photos/tamara-bellis-224507.jpg" width="50" alt="event">
 				</div>
@@ -54,7 +54,7 @@
 					<p>Svi članci</p>
 				</div>
 			</div>
-			<div class="cell cell--6--small cell--4--large author author">
+			<div class="cell cell--6--small cell--4--large author">
 				<div class="author__img">
 					<img src="img/photos/joshua-peacock-240448.jpg" width="50" alt="event">
 				</div>
@@ -64,7 +64,7 @@
 					<p>Svi članci</p>
 				</div>
 			</div>
-			<div class="cell cell--6--small cell--4--large author author">
+			<div class="cell cell--6--small cell--4--large author">
 				<div class="author__img">
 					<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="event">
 				</div>
