--- a/savjeti.html
+++ b/savjeti.html
@@ -78,8 +78,8 @@
 		<form class="form">
 				<fieldset class="form__fieldset">
 					<div class="form__field">
-						<label class="form__label">Email</label>
-						<input class="form__input form__input--contact" type="text" placeholder="Email">
+						<label class="form__label">E-mail</label>
+						<input class="form__input form__input--contact" type="text" placeholder="E-mail">
 					</div>
 
 					<div class="form__field">
