kontakt page responzivno

--- a/events.html
+++ b/events.html
@@ -34,15 +34,15 @@
 
 
 	<div class="grid summary clear">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">NADOLAZEĆI <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
-			<button class="btn btn--primary right"><a href="#">READ MORE</a></button>
+			<button class="btn btn--primary right"><a href="#">APPLY</a></button>
 		</div>
 	</div>
 
@@ -55,7 +55,7 @@
 			<h6 class="post__info">NADOLAZEĆI <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
-			<button class="btn btn--primary right"><a href="#">READ MORE</a></button>
+			<button class="btn btn--primary right"><a href="#">APPLY</a></button>
 		</div>
 	</div>
 
