--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Rastavljeni</title>
 	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
 	<link rel="stylesheet" href="scss/main.css">
+	<script src="js/burger_init.js"></script>
 </head>
 
 <body>
@@ -18,14 +19,13 @@
 				<img src="" alt="logo">
 			</div>
 
-			<div class="nav__links">
-				<ul>
+			<div class="nav__links nav--user__burger">
+				<ul class="burger burger--active">
 					<li><a href="#" class="link">O nama</a></li>
 					<li><a href="#" class="link">Blog</a></li>
 					<li><a href="#" class="link">Đogađaji</a></li>
 					<li><a href="#" class="link">Savjeti</a></li>
 					<li><a href="#" class="link">Kontakt</a></li>
-					<li><a href="#" class="link"><img src="" alt="search" /></a></li>
 				</ul>
 			</div>
 		</div>-->
@@ -92,7 +92,7 @@
 
 
 <section class="container faq">
-	<h2>Pitanja i odgovori</h2>
+	<h2 class="text--light">Pitanja i odgovori</h2>
 	
 	<div class="grid grid--gutters">
 		<div class="cell cell--12--small cell--6--large">
@@ -123,7 +123,7 @@
 
 
 <section class="container events">
-	<h2>Događaji</h2>
+	<h2 class="text--light">Događaji</h2>
 
 	<div class="grid grid--gutters">
 		<div class="cell cell--12--small cell--6--large event event--border">
