--- a/kontakt.html
+++ b/kontakt.html
@@ -47,10 +47,11 @@
 </section>
 
 <section class="form-background form-background--contact">
-	<div class="container">
-		<h2 class="text--light">Kontaktiraj nas</h2>
+	<div class="grid container">
+		<div class="cell cell--12--small">
+			<h2 class="text--light">Kontaktiraj nas</h2>
 
-		<form class="form">
+			<form class="form">
 				<fieldset class="form__fieldset">
 					<div class="form__field">
 						<label class="form__label">E-mail</label>
@@ -65,6 +66,7 @@
 					<button class="btn btn--primary btn--contact right"><a href="#">POŠALJI</a></button>
 				</fieldset>
 			</form>
+		</div>
 	</div>
 </section>
 
