savjeti page responzivno
accordion radi

--- a/kontakt.html
+++ b/kontakt.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kontakt | Rastavljeni</title>
 	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
-	<link rel="stylesheet" href="scss/main.css">
-	<script src="js/gmaps.js"></script>
+	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<script type="text/javascript" src="js/gmaps.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 <section class="about">
 	<div class="grid container">
 		<div class="cell cell--12--small">
-			<h2 class="text--light bot-margin">Opće informacije</h2>
+			<h2 class="text--light">Opće informacije</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu fermentum mi. Nullam aliquam efficitur magna, sit amet porttitor ante ullamcorper nec. Donec sapien est, imperdiet non rutrum vitae, blandit ut quam.</p>
 			<p>Mauris non libero elit. Quisque vitae magna eget ligula rhoncus lacinia. Curabitur dignissim orci et mi condimentum facilisis. Cras facilisis lectus euismod ante tempus, eget congue eros volutpat.</p>
 			<p>Vivamus commodo venenatis felis, vel pharetra sem bibendum in. Fusce quis odio ut tortor elementum molestie. Donec sollicitudin, metus quis sodales gravida, leo quam euismod erat, imperdiet porttitor arcu lacus ut est.</p>
