--- a/savjeti.html
+++ b/savjeti.html
@@ -8,6 +8,7 @@
 	<title>Savjeti | Rastavljeni</title>
 	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
 	<link rel="stylesheet" href="scss/main.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/accordion_init.js"></script>
 </head>
 
@@ -35,25 +36,49 @@
 	</div>
 
 
-	<h2 class="text--light clear">Odgovorena pitanja</h2>
+	<h2 class="text--light margin--h2 clear">Odgovorena pitanja</h2>
 
-
-
-		<div class="accordion__item">
-			<div class="accordion__arrow"></div>
-			<div class="accordion__head js-accordion__head">
-				<p class="about__highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
-			</div>
-
-			<div class="accordion__body js-accordion__body">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc viverra iaculis sagittis. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti. Vivamus aliquam sed ante ut lobortis. Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper.</p>
-
-				<p>Sed ac malesuada libero. In a dignissim diam, eu dapibus nisi. Pellentesque non risus non diam fringilla sodales ac et dui. Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce nibh nisl, rutrum a tristique eu, vehicula nec orci.</p>
-
-				<p>Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci.</p>
-			</div>
+	
+	<div class="accordion__item">
+		<div class="accordion__arrow"></div>
+		<div class="accordion__head js-accordion__head">
+			<p class="about__highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 		</div>
 
+		<div class="accordion__body js-accordion__body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc viverra iaculis sagittis. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti. Vivamus aliquam sed ante ut lobortis. Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper.</p>
+
+			<p>Sed ac malesuada libero. In a dignissim diam, eu dapibus nisi. Pellentesque non risus non diam fringilla sodales ac et dui. Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce nibh nisl, rutrum a tristique eu, vehicula nec orci.</p>
+
+			<p>Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci.</p>
+		</div>
+	</div>
+
+	<div class="accordion__item">
+		<div class="accordion__arrow"></div>
+		<div class="accordion__head js-accordion__head">
+			<p class="about__highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti?</p>
+		</div>
+
+		<div class="accordion__body js-accordion__body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc viverra iaculis sagittis. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti. Vivamus aliquam sed ante ut lobortis. Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper. Sed ac malesuada libero. In a dignissim diam, eu dapibus nisi. Pellentesque non risus non diam fringilla sodales ac et dui. Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien.</p>
+
+			<p>Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci.</p>
+		</div>
+	</div>
+
+	<div class="accordion__item">
+		<div class="accordion__arrow"></div>
+		<div class="accordion__head js-accordion__head">
+			<p class="about__highlight">Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper. Sed ac malesuada libero?</p>
+		</div>
+
+		<div class="accordion__body js-accordion__body">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc viverra iaculis sagittis. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti. Vivamus aliquam sed ante ut lobortis. Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper. Sed ac malesuada libero. In a dignissim diam, eu dapibus nisi. Pellentesque non risus non diam fringilla sodales ac et dui. Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet.</p>
+		</div>
+	</div>
 
 
 	<div class="pagination">
