events page responzivno

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Rastavljeni</title>
-	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
-	<link rel="stylesheet" href="scss/main.css">
-	<script src="js/burger_init.js"></script>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<script type="text/javascript" src="js/burger_init.js"></script>
 </head>
 
 <body>
