--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>O nama | Rastavljeni</title>
-	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
-	<link rel="stylesheet" href="scss/main.css">
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	<link type="text/css" rel="stylesheet" href="scss/main.css">
 </head>
 
 <body>
