--- a/events.html
+++ b/events.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Događaji | Rastavljeni</title>
-	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
-	<link rel="stylesheet" href="scss/main.css">
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	<link type="text/css" rel="stylesheet" href="scss/main.css">
 </head>
 
 <body>
@@ -42,29 +42,29 @@
 			<h6 class="post__info">NADOLAZEĆI <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
-			<button class="btn btn--primary right"><a href="#">APPLY</a></button>
+			<button class="btn btn--primary btn--apply right"><a href="#">APPLY</a></button>
 		</div>
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/alvin-balemesa-105751.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">NADOLAZEĆI <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
-			<button class="btn btn--primary right"><a href="#">APPLY</a></button>
+			<button class="btn btn--primary btn--apply right"><a href="#">APPLY</a></button>
 		</div>
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/andrew-branch-106877.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">ARHIVA <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -73,11 +73,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">ARHIVA <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -86,11 +86,11 @@
 	</div>
 
 	<div class="grid summary summary--no-border">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/alvin-balemesa-105751.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">ARHIVA <span>&bull;</span> 20.-21.05.2017. <span>&bull;</span> LOCATION</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
