--- a/kontakt.html
+++ b/kontakt.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kontakt | Rastavljeni</title>
-	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	<link type="text/css" rel="stylesheet" href="scss/main.css">
 	<script type="text/javascript" src="js/gmaps.js"></script>
 </head>
