--- a/savjeti.html
+++ b/savjeti.html
@@ -6,9 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Savjeti | Rastavljeni</title>
-	<!--<link rel="shortcut icon" type="image/png" href="img/alien_pixel.png"/>-->
-	<link rel="stylesheet" href="scss/main.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/accordion_init.js"></script>
 </head>
 
