--- a/blog.html
+++ b/blog.html
@@ -35,11 +35,11 @@
 
 
 	<div class="grid summary clear">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell--12--small cell--4--large summary__img">
 			<img src="img/photos/jenn-richardson-112980.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -48,11 +48,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/andrew-branch-106877.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -61,11 +61,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -74,11 +74,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/jenn-richardson-112980.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -87,11 +87,11 @@
 	</div>
 
 	<div class="grid summary summary--no-border">
-		<div class="cell cell--4--small summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img">
 			<img src="img/photos/andrew-branch-106877.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--8--small summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
