about page responzivnost
buttoni su još uvijek problem

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <section class="grid container about">
 	<div class="cell cell--12--small">
 		<h2>O projektu</h2>
-		<p class="about__highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
+		<p class="post--highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc viverra iaculis sagittis. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti. Vivamus aliquam sed ante ut lobortis. Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper.</p>
 		<p>Sed ac malesuada libero. In a dignissim diam, eu dapibus nisi. Pellentesque non risus non diam fringilla sodales ac et dui. Nunc vel quam id nisl dictum egestas vitae iaculis enim. Aenean ultrices faucibus arcu, sagittis iaculis metus facilisis non. Nunc dictum orci quis gravida vehicula. Maecenas dignissim enim vel arcu ornare, at condimentum ligula ullamcorper. Donec vestibulum suscipit neque vitae aliquet. Cras eget purus pellentesque, mattis augue at, vestibulum nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin feugiat, nisi nec egestas scelerisque, nunc erat efficitur lectus, id gravida orci urna eget sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce nibh nisl, rutrum a tristique eu, vehicula nec orci.</p>
 	</div>
@@ -42,66 +42,71 @@
 <section class="authors">
 	<div class="container">
 		<h2>Autori</h2>	
-	
-		<div class="grid grid--gutters">
-			<div class="cell cell--6--small cell--4--large author author--lg">
-				<div class="author__img">
-					<img src="img/photos/tamara-bellis-224507.jpg" width="50" alt="event">
+
+		<div class="grid authors--flex">
+			<div class="author author--border">
+				<div class="cell cell--12--small cell--4--large author__item">
+					<div class="author__img">
+						<img src="img/photos/tamara-bellis-224507-2.jpg" width="50" alt="author">
+					</div>
+					<div class="author__info">
+						<p>Lorem ipsum</p>
+						<p>Novinar</p>
+						<a href="#" class="link">Svi članci</a>
+					</div>
 				</div>
-				<div class="author__info">
-					<p>Lorem ipsum</p>
-					<p>Novinar</p>
-					<p>Svi članci</p>
+				<div class="cell cell--12--small cell--4--large author__item">
+					<div class="author__img">
+						<img src="img/photos/joshua-peacock-240448-2.jpg" width="50" alt="author">
+					</div>
+					<div class="author__info">
+						<p>Lorem ipsum</p>
+						<p>Novinar</p>
+						<a href="#" class="link">Svi članci</a>
+					</div>
 				</div>
-			</div>
-			<div class="cell cell--6--small cell--4--large author">
-				<div class="author__img">
-					<img src="img/photos/joshua-peacock-240448.jpg" width="50" alt="event">
-				</div>
-				<div class="author__info">
-					<p>Lorem ipsum</p>
-					<p>Novinar</p>
-					<p>Svi članci</p>
-				</div>
-			</div>
-			<div class="cell cell--6--small cell--4--large author">
-				<div class="author__img">
-					<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="event">
-				</div>
-				<div class="author__info">
-					<p>Lorem ipsum</p>
-					<p>Novinar</p>
-					<p>Svi članci</p>
-				</div>
-			</div>
-			<div class="cell cell--6--small cell--4--large author">
-				<div class="author__img">
-					<img src="img/photos/tamara-bellis-224507.jpg" width="50" alt="event">
-				</div>
-				<div class="author__info">
-					<p>Lorem ipsum</p>
-					<p>Novinar</p>
-					<p>Svi članci</p>
+				<div class="cell cell--12--small cell--4--large author__item">
+					<div class="author__img">
+						<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="author">
+					</div>
+					<div class="author__info">
+						<p>Lorem ipsum</p>
+						<p>Novinar</p>
+						<a href="#" class="link">Svi članci</a>
+					</div>
 				</div>
 			</div>
-			<div class="cell cell--6--small cell--4--large author">
-				<div class="author__img">
-					<img src="img/photos/joshua-peacock-240448.jpg" width="50" alt="event">
+
+			<div class="author">
+				<div class="cell cell--12--small cell--4--large author__item">
+					<div class="author__img">
+						<img src="img/photos/tamara-bellis-224507-2.jpg" width="50" alt="author">
+					</div>
+					<div class="author__info">
+						<p>Lorem ipsum</p>
+						<p>Novinar</p>
+						<a href="#" class="link">Svi članci</a>
+					</div>
 				</div>
-				<div class="author__info">
-					<p>Lorem ipsum</p>
-					<p>Novinar</p>
-					<p>Svi članci</p>
+				<div class="cell cell--12--small cell--4--large author__item">
+					<div class="author__img">
+						<img src="img/photos/joshua-peacock-240448-2.jpg" width="50" alt="author">
+					</div>
+					<div class="author__info">
+						<p>Lorem ipsum</p>
+						<p>Novinar</p>
+						<a href="#" class="link">Svi članci</a>
+					</div>
 				</div>
-			</div>
-			<div class="cell cell--6--small cell--4--large author">
-				<div class="author__img">
-					<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="event">
-				</div>
-				<div class="author__info">
-					<p>Lorem ipsum</p>
-					<p>Novinar</p>
-					<p>Svi članci</p>
+				<div class="cell cell--12--small cell--4--large author__item">
+					<div class="author__img">
+						<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="author">
+					</div>
+					<div class="author__info">
+						<p>Lorem ipsum</p>
+						<p>Novinar</p>
+						<a href="#" class="link">Svi članci</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -115,13 +120,28 @@
 
 		<div class="grid grid--gutters">
 			<div class="cell cell--12--small cell--4--large">
-				<button class="btn btn--primary doc"><img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />Lorem ipsum dolor sit amet consectetur</button>
+				<button class="btn btn--primary doc">
+					<a href="#" class="link">
+					<img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />
+						Lorem ipsum dolor sit amet consectetur
+					</a>
+				</button>
 			</div>
 			<div class="cell cell--12--small cell--4--large">
-				<button class="btn btn--primary doc"><img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />Lorem ipsum dolor sit amet consectetur</button>
+				<button class="btn btn--primary doc">
+					<a href="#" class="link">
+						<img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />
+						Lorem ipsum dolor sit amet consectetur
+					</a>
+				</button>
 			</div>
 			<div class="cell cell--12--small cell--4--large">
-				<button class="btn btn--primary doc"><img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />Lorem ipsum dolor sit amet consectetur</button>
+				<button class="btn btn--primary doc">
+					<a href="#" class="link">
+						<img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />
+						Lorem ipsum dolor sit amet consectetur
+					</a>
+				</button>
 			</div>
 		</div>
 	</div>
