--- a/blog-detalji.html
+++ b/blog-detalji.html
@@ -25,7 +25,7 @@
 <div class="container">
 	<section class="grid about">
 		<div class="cell cell--12--small post__text">
-			<p class="about__highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
+			<p class="post--highlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam gravida mauris sit amet purus mattis feugiat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nec venenatis dui. Nam vitae hendrerit ante. Nunc viverra iaculis sagittis. Aliquam quis purus sed mi facilisis laoreet. Nam a urna vel nibh dictum dignissim. Suspendisse potenti. Vivamus aliquam sed ante ut lobortis. Mauris non molestie dolor. Fusce placerat quam nulla, vitae tincidunt mauris ultrices ullamcorper.</p>
 
@@ -41,14 +41,14 @@
 
 
 
-	<div class="author autho--sm right">
+	<div class="author author--small right">
 		<div class="author__img">
-			<img src="img/photos/joshua-peacock-240448.jpg" width="50" alt="event">
+			<img src="img/photos/michael-frattaroli-234665.jpg" alt="author">
 		</div>
 		<div class="author__info">
 			<p>Lorem ipsum</p>
 			<p>Novinar</p>
-			<p>Svi članci</p>
+			<a href="#" class="link">Svi članci</a>
 		</div>
 	</div>
 
